[gd_scene load_steps=12 format=3 uid="uid://bi7aft3snxvn1"]

[ext_resource type="Script" path="res://scripts/forgot_password.gd" id="1_pndgt"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="2_3yri6"]
[ext_resource type="Texture2D" uid="uid://cg483dwdrktcw" path="res://assets/images/back.png" id="3_jtc25"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="4_6ncmo"]
[ext_resource type="Texture2D" uid="uid://bu1jy0clvmo3y" path="res://assets/images/fermer.png" id="5_po73k"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="6_lwn1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vd4fy"]
bg_color = Color(0.152941, 0.14902, 0.14902, 0.780392)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n23bi"]
bg_color = Color(0.85098, 0.85098, 0.85098, 0.952941)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.10748, 0.10748, 0.10748, 0.6)
shadow_size = 8
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xum7"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_bottom_left = 7
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 3
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2ubi"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.0562916, 0.0562916, 0.0562916, 0.6)
shadow_size = 2
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ikj0v"]
color = Color(1, 1, 1, 1)

[node name="Control" type="Control"]
process_mode = 3
z_index = 5
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 130.0
offset_right = 1595.0
offset_bottom = 930.0
script = ExtResource("1_pndgt")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -388.0
offset_top = -199.0
offset_right = 1674.0
offset_bottom = 1014.0
color = Color(0, 0, 0, 0.501961)

[node name="ShadowBox" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 11.0
offset_top = 1.0
offset_right = 1291.0
offset_bottom = 821.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vd4fy")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
color = Color(0.729412, 0.215686, 0.215686, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
texture = ExtResource("3_jtc25")
expand_mode = 1

[node name="email" type="LineEdit" parent="."]
z_index = 1
layout_mode = 2
offset_left = 388.0
offset_top = 472.0
offset_right = 900.0
offset_bottom = 552.0
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_n23bi")
placeholder_text = "     Email"

[node name="logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 478.0
offset_top = 32.0
offset_right = 806.0
offset_bottom = 307.0
texture = ExtResource("4_6ncmo")
expand_mode = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 1225.0
offset_right = 1275.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xum7")

[node name="CancelButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
icon = ExtResource("5_po73k")
flat = true
expand_icon = true

[node name="sendCode" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 494.0
offset_top = 633.0
offset_right = 780.0
offset_bottom = 708.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3yri6")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_u2ubi")
text = "send Code"

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 303.0
offset_right = 908.0
offset_bottom = 391.0
theme_override_colors/font_color = Color(0.051971, 0.051971, 0.051971, 0.831373)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 18
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_lwn1m")
theme_override_font_sizes/font_size = 70
text = "Account Recovery !"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 581.0
offset_top = 743.0
offset_right = 679.0
offset_bottom = 790.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxLine_ikj0v")
text = "Cancel"
flat = true

[connection signal="pressed" from="Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="sendCode" to="." method="_on_send_code_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
