[gd_scene load_steps=11 format=3 uid="uid://djuk2opu2wirf"]

[ext_resource type="Script" path="res://scripts/forgot_password.gd" id="1_ywdgm"]
[ext_resource type="Texture2D" uid="uid://cg483dwdrktcw" path="res://assets/images/back.png" id="2_cnj2e"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="3_dx3kj"]
[ext_resource type="Texture2D" uid="uid://bu1jy0clvmo3y" path="res://assets/images/fermer.png" id="4_p0mf1"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="5_s3xa8"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="6_rj47g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_785nn"]
bg_color = Color(0.152941, 0.14902, 0.14902, 0.780392)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n23bi"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.10748, 0.10748, 0.10748, 0.6)
shadow_size = 8
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ve66u"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_bottom_left = 7
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 3
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23hmj"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.054902, 0.054902, 0.054902, 0.6)
shadow_size = 8
shadow_offset = Vector2(8, 8)

[node name="Control" type="Control"]
process_mode = 3
z_index = 5
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 130.0
offset_right = 1595.0
offset_bottom = 930.0
script = ExtResource("1_ywdgm")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -363.0
offset_top = -211.0
offset_right = 1696.0
offset_bottom = 1001.0
color = Color(0.180392, 0.180392, 0.180392, 0.262745)

[node name="ShadowBox" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 5.0
offset_right = 1295.0
offset_bottom = 827.0
theme_override_styles/normal = SubResource("StyleBoxFlat_785nn")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
color = Color(0.729412, 0.215686, 0.215686, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
texture = ExtResource("2_cnj2e")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 478.0
offset_top = 32.0
offset_right = 808.0
offset_bottom = 307.0
texture = ExtResource("3_dx3kj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
offset_left = 400.0
offset_top = 442.0
offset_right = 900.0
offset_bottom = 633.0
theme_override_constants/separation = 30

[node name="password" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_n23bi")
placeholder_text = "     New Password"

[node name="confirmPassword" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_n23bi")
placeholder_text = "     Confirm Password"

[node name="Control" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 781.0
offset_right = 821.0
offset_bottom = 38.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ve66u")

[node name="CancelButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
icon = ExtResource("4_p0mf1")
flat = true
expand_icon = true

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 306.0
offset_right = 836.0
offset_bottom = 394.0
theme_override_colors/font_color = Color(0.051971, 0.051971, 0.051971, 0.831373)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("5_s3xa8")
theme_override_font_sizes/font_size = 70
text = "New Password"

[node name="confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 682.0
offset_right = 786.0
offset_bottom = 757.0
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rj47g")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_23hmj")
text = "Confirm"

[connection signal="pressed" from="Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="confirm" to="." method="_on_confirm_pressed"]
